--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "react-homework-template",
+  "name": "converter",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://IrynkaKol.github.io/converter/",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.19",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
